Fixed spacing, responsiveness.

--- a/stylesheets/base/variables.scss
+++ b/stylesheets/base/variables.scss
@@ -33,11 +33,11 @@ $grid-column-count: 12;
 $grid-baseline: 16px;
 
 // Gutters
-$gutter: 30px;
+$gutter: 20px;
 $container-gutter-mobile: $gutter;
 $container-gutter-tablet: 50px;
 $container-gutter-desktop: 70px;
 
 // Page
-$page-width: 1290px;
+$page-width: 1840px;//1290px;
 $page-limit: $page-width + ($container-gutter-desktop * 2);
