--- a/stylesheets/modules/clients.scss
+++ b/stylesheets/modules/clients.scss
@@ -1,4 +1,5 @@
 .clients {
+  padding: 100px 0;
   &__grid {
     @include grid-row();
   }
